# kfp-simple-example

./: .gitignore  README.md  pipeline.py  pyproject.toml  requirements.txt  run_pipeline.py
training/: Dockerfile  kfp_config.ini  runtime-requirements.txt  train.py
training/component_metadata/: add.yaml  generate_data.yaml  register_model.yaml  split_dataset.yaml  train_model.yaml
